[package]
name = "windowless"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
shaderc = "0.7"
wgpu = { version = "0.12", features = ["spirv"] }
pollster = "0.2"

[[bin]]
name = "windowless"
path = "src/main.rs"
