[package]
name = "windowless"
version = "0.1.0"
authors = ["Ben Hansen <bhbenjaminhansen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
shaderc = "0.8"
wgpu = { version = "0.13", features = ["spirv"] }
pollster = "0.2"
futures-intrusive = "0.4"

[[bin]]
name = "windowless"
path = "src/main.rs"
