[package]
name = "windowless"
version = "0.1.0"
authors = ["Ben Hansen <https://github.com/sotrh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
wgpu = { version = "28.0", features = ["spirv"] }
pollster = "0.3"
futures-intrusive = "0.4"

[[bin]]
name = "windowless"
path = "src/main.rs"
